objects/Lead_Transition__c.object
<CustomObject>
    <fields>
        <fullName>Edited_By__c</fullName>
        <label>Edited By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Transitions</relationshipLabel>
        <relationshipName>Lead_Transitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_date__c</fullName>
        <label>Modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_value__c</fullName>
        <label>New value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Transition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lead Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>